// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jill info should print current workspace data 1`] = `
Object {
  "code": 0,
  "stderr": Array [
    "- Loading project",
  ],
  "stdout": Array [
    "Workspace [1mmock-test-a[22m:",
    "[1mVersion:[22m   undefined",
    "[1mDirectory:[22m .",
    "",
    "[1mDependencies:[22m",
    "- mock-test-b",
    "",
    "[1mDev-Dependencies:[22m",
    "- mock-test-c",
  ],
}
`;

exports[`jill info should print given workspace data 1`] = `
Object {
  "code": 0,
  "stderr": Array [
    "- Loading project",
  ],
  "stdout": Array [
    "Workspace [1mmock-test-a[22m:",
    "[1mVersion:[22m   undefined",
    "[1mDirectory:[22m workspaces\\\\test-a",
    "",
    "[1mDependencies:[22m",
    "- mock-test-b",
    "",
    "[1mDev-Dependencies:[22m",
    "- mock-test-c",
  ],
}
`;

exports[`jill info should print main workspace data 1`] = `
Object {
  "code": 0,
  "stderr": Array [
    "- Loading project",
  ],
  "stdout": Array [
    "Workspace [1mmock-root[22m:",
    "[1mVersion:[22m   undefined",
    "[1mDirectory:[22m .",
  ],
}
`;
